# CZAR

./: Build.sh  CMakeLists.txt  README.md  porgram.czr  sans-functions-synthvars.def  step-guid.def
include/: image.h  loadAST.h  node.h  registerNeeds.h  symbolTable.h  treeCG.h
src/: image.cpp  loadAST.cpp  main.cpp  node.cpp  registerNeeds.cpp  symbolTable.cpp  treeCG.cpp
